modified task bar

--- a/Home.html
+++ b/Home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/Home.css">
 </head>
 <body>
-    <ul>
+    <ul class="taskbar">
         <li><a href="Home.html">Home</a></li>
         <li><a href="Introduction.html">Introduction</a></li>
         <li><a href="Photos.html">Photos</a></li>
