home-container added to home.html

--- a/Home.html
+++ b/Home.html
@@ -13,5 +13,10 @@
         <li><a href="Photos.html">Photos</a></li>
         <li><a href="Contact.html">Contact</a></li>
     </ul>
+
+    <div class="home-container">
+        <p>HI!!!</p>
+        <p>WELCOME TO MY PAGE</p>
+    </div>
 </body>
 </html>
