added text-align margin-top and font-size to class=welcome (home.css)

--- a/Home.html
+++ b/Home.html
@@ -15,8 +15,7 @@
     </ul>
 
     <div class="home-container">
-        <p>HI!!!</p>
-        <p>WELCOME TO MY PAGE</p>
+        <div class="welcome">WELCOME TO MY PAGE</div>
     </div>
 </body>
 </html>
